css/parser/tests/errors/strings/newline/output.stderr
error: Expected "}"
 --> $DIR/tests/errors/strings/newline/input.css:2:13
  |
2 |     prop: "
  |             ^

error: Expected Declaration value
 --> $DIR/tests/errors/strings/newline/input.css:2:11
  |
2 |     prop: "
  |           ^

